<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_bg">

    <!-- Logo -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_app_name"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_logo" />

    <!-- App Name -->
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed" />

    <!-- Clock Animation -->
    <ImageView
        android:id="@+id/iv_clock"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_clock"
        android:contentDescription="@string/loading" />

    <!-- Loading Text -->
    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_clock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/loading_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:alpha="0.8" />

    <!-- Version Info -->
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/version_info"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:alpha="0.6" />

</RelativeLayout>